fixed tweet button not visible

--- a/app/assets/stylesheets/score.scss
+++ b/app/assets/stylesheets/score.scss
@@ -77,7 +77,7 @@
 		top: 50px;
 		left: 10px;
 		font-size: 16px;
-		width: 230px;
+		width: 205px;
 	}
 
 	/* clearfix 
@@ -145,7 +145,7 @@
 
 		@media screen and (max-width: $desktopwidth) {
 			font-size: 10px;
-			width: 110px;
+			width: 100px;
 			padding: 0;
 		}
 
